--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "bootstrap": "^5.3.8",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.10",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^10.0.0",
     "react-router-dom": "^7.11.0",
     "react-scripts": "^5.0.1",
     "react-vertical-timeline-component": "^3.5.3",
