--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-intersection-observer": "^10.0.0",
     "react-router-dom": "^7.11.0",
     "react-scripts": "^5.0.1",
+    "react-scroll": "^1.9.3",
     "react-vertical-timeline-component": "^3.5.3",
     "web-vitals": "^5.1.0"
   },
