--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@fontsource/momo-signature": "^5.2.1",
     "@fontsource/zalando-sans": "^5.2.1",
     "bootstrap": "^5.3.8",
+    "bootstrap-icons": "^1.13.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.10",
     "react-countup": "^6.5.3",
@@ -13,7 +14,9 @@
     "react-router-dom": "^7.11.0",
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.9.3",
+    "react-syntax-highlighter": "^16.1.0",
     "react-vertical-timeline-component": "^3.5.3",
+    "reactive-button": "^1.3.15",
     "web-vitals": "^5.1.0"
   },
   "scripts": {
